# CppServer

conan/: CMakeLists.txt  build.bat  conandata.yml  conanfile.py  conanfilelocal.py  create.bat  create.py  dwarf2-x86.txt  msys2_mingw.txt  seh-x86_64.txt
conan/base/: conanfilebase.py
conan/local/: CMakeLists.txt
conan/patches/: 00001-update-cmakelists.patch  00002-disable-asio-separate-compilation.patch
conan/test_package/benchmarks/: CMakeLists.txt
conan/test_package/examples/: CMakeLists.txt
